--- a/css/index.css
+++ b/css/index.css
@@ -771,6 +771,12 @@ textarea:-ms-input-placeholder {
     text-align: center;
 }
 
+.has-error .help-block, .has-error .control-label, .has-error .radio, .has-error .checkbox, .has-error .radio-inline, .has-error .checkbox-inline, .has-error.radio label, .has-error.checkbox label, .has-error.radio-inline label, .has-error.checkbox-inline label{
+    color:white;
+}
+
+
+
 /* 底 */
 .footer{
 	width:100vw;
