--- a/css/index.css
+++ b/css/index.css
@@ -643,6 +643,10 @@ nav{
     width:100%;
 }
 
+.alert.alert-undefined.alert-dismissable {
+    color: white;
+}
+
 .contactUsHeading{
     margin:5vh auto 2.5vh;
     color:white;
